# MineSweeper_on_Qt

./: CMakeLists.txt
resources/: Info.plist  Minesweeper.icns  resources.qrc
src/: CMakeLists.txt  appinfo.h.in  gameStats.cpp  gameStats.h  gameStatsDialog.cpp  gameStatsDialog.h  gameboard.cpp  gameboard.h  highScore.cpp  highScore.h  highScoreDialog.cpp  highScoreDialog.h  highScoreModel.cpp  highScoreModel.h  main.cpp  mainwindow.cpp  mainwindow.h  mineCounter.cpp  mineCounter.h  minetimer.cpp  minetimer.h  statistics.h  tile.cpp  tile.h
